-- packages update/upgrade for security issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,6 +20,17 @@
     "incremental": true,
     "baseUrl": ".",
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.node.ts", "**/*.tsx", "decs.d.ts", "global.d.ts"],
-  "exclude": ["node_modules", "node_modules_linux", "./deploy/tools/envs-validator"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.node.ts",
+    "**/*.tsx",
+    "decs.d.ts",
+    "global.d.ts",
+  ],
+  "exclude": [
+    "node_modules",
+    "node_modules_linux",
+    "./deploy/tools/envs-validator"
+  ],
 }
